--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_subdirectory(${ENGINE_EXTERNAL_DIR})
 add_subdirectory(${ENGINE_SOURCE_DIR})
 
 if (INCLUDE_TEST)
+    enable_testing()
     add_subdirectory(test)
 endif()
 
