--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "engine/external/fmt"]
 	path = engine/external/fmt
 	url = https://github.com/fmtlib/fmt.git
+[submodule "engine/external/directx_headers"]
+	path = engine/external/directx_headers
+	url = https://github.com/microsoft/DirectX-Headers
