--- a/engine/source/apple/macos/CMakeLists.txt
+++ b/engine/source/apple/macos/CMakeLists.txt
@@ -16,6 +16,12 @@ PRIVATE
     impl/cocoa_view.mm
 )
 
+target_precompile_headers(mini.macos
+PRIVATE
+    internal/cocoa_application.h
+    internal/cocoa_window.h
+)
+
 target_link_libraries(mini.macos
 PRIVATE
     mini.graphics
