--- a/engine/source/core/CMakeLists.txt
+++ b/engine/source/core/CMakeLists.txt
@@ -1,6 +1,8 @@
 # core module mostly contains the fundamentals and relies heavily on templates
 # so instead of selectively exporting the symbols, everything will be exported
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+set(CMAKE_CXX_VISIBILITY_PRESET default)
+set(CMAKE_VISIBILITY_INLINES_HIDDEN FALSE)
 
 add_module(mini.core SHARED)
 
