--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ project(MiniEngine
     VERSION 0.1.0
 )
 
+set(ENGINE_PROJECT_AHTHOR "ross1573")
+set(ENGINE_MACOS_IDENTIFIER "com.ross1573.MiniEngine")
+
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_CXX_EXTENSIONS FALSE)
@@ -12,13 +15,12 @@ set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN TRUE)
 
 set(BUILD_TARGET_ARCH ${CMAKE_SYSTEM_PROCESSOR})
-set(ENGINE_PROJECT_AHTHOR "ross1573")
-set(ENGINE_MACOS_IDENTIFIER "com.ross1573.MiniEngine")
-set(ENGINE_MODULE_PREFIX $<IF:$<CONFIG:Debug>,minid,mini>)
+set(BUILD_SHARED_LIBS $<NOT:$<CONFIG:MinSizeRel>>)
+set(BUILD_MODULE_PREFIX $<IF:$<CONFIG:Debug>,minid,mini>)
 
 set(ENGINE_PROJECT_DIR "${CMAKE_SOURCE_DIR}")
-set(ENGINE_EXTERNAL_DIR "${CMAKE_SOURCE_DIR}/engine/external")
 set(ENGINE_SOURCE_DIR "${CMAKE_SOURCE_DIR}/engine/source")
+set(ENGINE_EXTERNAL_DIR "${CMAKE_SOURCE_DIR}/engine/external")
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/lib/${BUILD_TARGET_ARCH}")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/lib/${BUILD_TARGET_ARCH}")
