mod: change output directory on windows
windows does not have any alternative solution on RPATH
so we just dump every file on a single folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,12 @@ set(BUILD_MODULE_PREFIX $<IF:$<CONFIG:Debug>,minid,mini>)
 set(ENGINE_PROJECT_DIR "${CMAKE_SOURCE_DIR}")
 set(ENGINE_SOURCE_DIR "${CMAKE_SOURCE_DIR}/engine/source")
 set(ENGINE_EXTERNAL_DIR "${CMAKE_SOURCE_DIR}/engine/external")
+set(ENGINE_LIBRARY_DIR "${ENGINE_PROJECT_DIR}/lib")
+set(ENGINE_RUNTIME_DIR "${ENGINE_PROJECT_DIR}/bin")
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/lib/${BUILD_TARGET_ARCH}")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/lib/${BUILD_TARGET_ARCH}")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/bin/${BUILD_TARGET_ARCH}")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${ENGINE_LIBRARY_DIR}/${BUILD_TARGET_ARCH}")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${ENGINE_LIBRARY_DIR}/${BUILD_TARGET_ARCH}")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${ENGINE_RUNTIME_DIR}/${BUILD_TARGET_ARCH}")
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "build")
