--- a/engine/source/platform/CMakeLists.txt
+++ b/engine/source/platform/CMakeLists.txt
@@ -5,12 +5,13 @@ PUBLIC
     FILE_SET platform TYPE CXX_MODULES
     FILES
         platform.cxx
+        module_loader.cxx
         handle.cxx
         window.cxx
-        module.cxx
 
 PRIVATE
     impl/platform.cpp
+    impl/module_loader.cpp
 )
 
 target_link_libraries(mini.platform 
