mod: module system

--- a/engine/source/CMakeLists.txt
+++ b/engine/source/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(CMAKE_CXX_SCAN_FOR_MODULES TRUE)
 set(CMAKE_MESSAGE_LOG_LEVEL STATUS)
 
+include(mini_util)
 include(mini_module)
 include(mini_define)
 include(mini_option)
