--- a/engine/source/launcher/CMakeLists.txt
+++ b/engine/source/launcher/CMakeLists.txt
@@ -5,10 +5,10 @@ elseif (APPLE)
     set_target_properties(mini.launcher 
     PROPERTIES 
         MACOSX_BUNDLE TRUE
-        MACOSX_BUNDLE_BUNDLE_NAME ${PROJECT_NAME}
-        MACOSX_BUNDLE_BUNDLE_VERSION ${CMAKE_PROJECT_VERSION}
-        MACOSX_BUNDLE_COPYRIGHT ${ENGINE_PROJECT_AHTHOR}
-        MACOSX_BUNDLE_GUI_IDENTIFIER ${ENGINE_MACOS_IDENTIFIER}
+        MACOSX_BUNDLE_BUNDLE_NAME ${ENGINE_PROJECT_NAME}
+        MACOSX_BUNDLE_BUNDLE_VERSION ${ENGINE_PROJECT_VERSION}
+        MACOSX_BUNDLE_COPYRIGHT ${ENGINE_PROJECT_AUTHOR}
+        MACOSX_BUNDLE_GUI_IDENTIFIER "com.${ENGINE_PROJECT_AUTHOR}.${ENGINE_PROJECT_NAME}"
     )
 else()
     message(FATAL_ERROR "unable to build on unknown platform: " ${CMAKE_SYSTEM_NAME})
