--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,7 @@
-include(mini_define)
 include(mini_option)
 include(mini_module)
+
+set_output_directory(${BUILD_TARGET_ARCH})
 
 function (no_arg_test name)
     add_executable(test.${name} ${name}.cpp)
