mod: switched define header generation scope to module
now module specific definitions can be added
currently tests are failing (error on code generation)

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -5,6 +5,8 @@ include_static(GoogleBenchmark)
 
 function (no_arg_benchmark name)
     add_executable(benchmark.${name} ${name}.cpp)
+
+    generate_define_header(benchmark.${name})
     
     target_link_libraries(benchmark.${name} PRIVATE mini.benchmark)
     set_target_properties(benchmark.${name} PROPERTIES
