--- a/engine/source/CMakeLists.txt
+++ b/engine/source/CMakeLists.txt
@@ -1,23 +1,23 @@
 set(CMAKE_CXX_SCAN_FOR_MODULES TRUE)
 set(CMAKE_MESSAGE_LOG_LEVEL STATUS)
 
-include(mini_util)
-include(mini_module)
+include(mini_define)
 include(mini_option)
+include(mini_module)
 
 set_output_directory(${BUILD_TARGET_ARCH})
 
-add_subdirectory(core)
-add_subdirectory(platform)
-add_subdirectory(graphics)
+add_subdirectory_analyzed(core)
+add_subdirectory_analyzed(platform)
+add_subdirectory_analyzed(graphics)
 
 if (WIN32)
-    add_subdirectory(windows)
-    add_subdirectory(d3d12)
+    add_subdirectory_analyzed(windows)
+    add_subdirectory_analyzed(d3d12)
 elseif (APPLE)
-    add_subdirectory(apple)
-    add_subdirectory(metal)
+    add_subdirectory_analyzed(apple)
+    add_subdirectory_analyzed(metal)
 endif()
 
-add_subdirectory(engine)
-add_subdirectory(launcher)
+add_subdirectory_analyzed(engine)
+add_subdirectory_analyzed(launcher)
