mod: refactor cmake script on module generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN TRUE)
 
 set(BUILD_TARGET_ARCH ${CMAKE_SYSTEM_PROCESSOR})
-set(BUILD_MODULE_PREFIX $<IF:$<CONFIG:Debug>,minid,mini>)
+set(BUILD_PREFIX $<$<CONFIG:Debug>:d>)
 
 set(ENGINE_PROJECT_DIR "${CMAKE_SOURCE_DIR}")
 set(ENGINE_SOURCE_DIR "${CMAKE_SOURCE_DIR}/engine/source")
