--- a/engine/source/launcher/CMakeLists.txt
+++ b/engine/source/launcher/CMakeLists.txt
@@ -21,8 +21,11 @@ FILES
     launcher.cxx
 )
 
-generate_static_init(mini.launcher)
 generate_define_header(mini.launcher)
+generate_static_init(mini.launcher
+    INITIALIZE StaticInitialize
+    CLEANUP StaticCleanup
+)
 
 get_property(static_modules GLOBAL PROPERTY STATIC_MODULE)
 set(modules
