--- a/engine/source/core/CMakeLists.txt
+++ b/engine/source/core/CMakeLists.txt
@@ -86,6 +86,7 @@ PRIVATE
     impl/assert_util.cpp
     impl/module_system.cpp
 
+    $<$<PLATFORM_ID:Windows>:impl/windows/win_assertion.h>
     $<$<PLATFORM_ID:Windows>:impl/windows/win_assert.cpp>
     $<$<PLATFORM_ID:Windows>:impl/windows/win_logger.cpp>
     $<$<PLATFORM_ID:Windows>:impl/windows/win_module.cpp>
